# c3-benchmarking

./: .gitignore  .hgignore  Dockerfile  README.md  pyproject.toml  setup_data.py
.devcontainer/: devcontainer.json
scripts/: download_data.sh
src/c3bench/: __init__.py
