[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "c3bench"
authors = [
    { name = "Your Name", email = "Your.Email@somewhere.edu.au"},
]
keywords = ["biology", "genomics", "statistics", "phylogeny", "evolution", "bioinformatics"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = ["click", "rich", "cogent3-h5seqs>=0.6.0"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
    ]
# the following are inferred from the source code
dynamic = ["version", "description"]

[project.scripts]
c3bench = "c3bench:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nox",
]
dev = [
    "ruff",
    "c3bench[test]",
    "line-profiler",
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "-ra"]
testpaths = "tests"

[tool.setuptool]
include-package-data = true

[tool.setuptool.packages.find]
where = ["src"]

[tool.setuptool.sdist]
include = ["doc/", "requirements.txt", "src/*", "pyproject.toml"]
exclude = ["doc/*.html"]

